Create card elements to display data for six day forecast

--- a/index.html
+++ b/index.html
@@ -8,21 +8,52 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Space+Mono&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
+    <div style="background-image: url(./images/backdrop.jpg);">
         <main class ="container">
             <nav>
                 <h1>Weather Forecast</h1>
             </nav>
-            <section id="daily-forecast"></section>
-                <section id="dayone">monday</section>
-                <section id="daytwo">tuesday</section>
-                <section id="daythree">wednesday</section>
-                <section id="dayfour">thursday</section>
-                <section id="dayfive">friday</section>
-                <section id="daysix">saturday</section>
+                <section id="dayone">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
+                <section id="daytwo">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
+                <section id="daythree">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
+                <section id="dayfour">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
+                <section id="dayfive">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
+                <section id="daysix">
+                    <h3>(_______)</h3>
+                    <h4>Temp: ___°C</h4>
+                    <h4>Wind: ___ m/s</h4>
+                    <h4>Humidity: ___%</h4>
+                </section>
             </section>
+
             <aside id="sidebar">
                 <p class="today-date">16 November 2023 09.39</p>
                 <div class="search">
@@ -60,7 +91,6 @@
                 <a href="#"><img src="./images/whatsapp.png"></a>
                 <a href="#"><img src="./images/linkedin.png"></a>
                 <a href="#"><img src="./images/tiktok.png"></a>
-
             </footer>
         </main>
 
