--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script type="module" src="script.js" defer></script>
 </head>
 <body>
-    <div style="background-image: url(./images/backdrop.jpg);">
         <main class ="container">
             <nav>
                 <h1>Weather Forecast</h1>
@@ -55,28 +54,28 @@
             </section>
 
             <aside id="sidebar">
-                <p class="today-date">16 November 2023 09.39</p>
+                <p class="today-date"></p>
                 <div class="search">
                     <input class="city-input" type ="text" placeholder="Enter City Name">
                     <button class ="search-btn"><img src="./images/searchicon.png" alt="#"></button>
                 </div>
                 <div class="weather">
                     <img src="./images/cloudsnow-02.png" height="220px"  alt="Clouds with snow">
-                    <h1 class="city-name">London</h2>
-                    <h2 class="temp">21°C</h1>
+                    <h1 class="city-name">_______</h1>
+                    <h2 class="temp">___°C</h2>
                 
                     <div class="wind-humidity">
                         <div class="col">
                             <img src="./images/humidity.png">
                             <div>
-                                <p class="humidity">50%</p>
+                                <p class="humidity">___%</p>
                                 <p>Humidity</p>
                             </div>
                         </div>
                         <div class="col">
                             <img src="./images/wind.png">
                             <div>
-                                <p class="wind">15 km/h</p>
+                                <p class="wind">___ m/s</p>
                                 <p>Wind Speed</p>
                             </div>
                         </div>
@@ -85,12 +84,12 @@
             </aside>
  
             <footer>
-                <a href="#"><img src="./images/facebook.png"></a>
-                <a href="#"><img src="./images/instgram.png"></a>
-                <a href="#"><img src="./images/twitter.png"></a>
-                <a href="#"><img src="./images/whatsapp.png"></a>
-                <a href="#"><img src="./images/linkedin.png"></a>
-                <a href="#"><img src="./images/tiktok.png"></a>
+                <a href="https://www.facebook.com/"><img src="./images/facebook.png"></a>
+                <a href="https://www.instagram.com/"><img src="./images/instgram.png"></a>
+                <a href="http://www.twitter.com/"><img src="./images/twitter.png"></a>
+                <a href="https://www.whatsapp.com/"><img src="./images/whatsapp.png"></a>
+                <a href="https://www.linkedin.com/"><img src="./images/linkedin.png"></a>
+                <a href="https://www.tiktok.com/"><img src="./images/tiktok.png"></a>
             </footer>
         </main>
 
